builtins/file-browser/templates/file-browser.css
.fb-main {
    width: 100%;
    height: 100%;
    background: #DDD;

    font-family: monaco, Consolas, 'Lucida Console', monospace;
    font-size: 16px;
    font-style: normal;
    font-variant: normal;
    font-weight: 500;
    line-height: 16px;
}

.fb-pane-navbar {
    position: absolute;
    top: 0px;
    left: 0px;
    height: 40px;
    width: 100%;
    background: #FFF;
    padding-top: 5px;
    padding-left: 5px;
    padding-right: 5px;
}

.fb-pane {
    position: absolute;
    top: 44px;
    bottom: 34px;
    height: auto;
    background: #FFF;
}

.fb-pane img, .fb-pane span {
    vertical-align: middle;
}

.fb-pane.fb-pane-nav {
    left: 0px;
    width: 248px;
    overflow: auto;
}

.fb-pane.fb-pane-nav .fb-favorites {
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100%;
    width: 100%;

    padding: 5px 5px 5px 5px;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.fb-pane.fb-pane-nav .fb-favorites .title {
    font-color: LightGray;
    border-bottom: 1px solid black;
    margin-bottom: 4px;
}

.fb-pane.fb-pane-nav .fb-favorites .fb-favorite {
    margin-bottom: 2px;
    cursor: pointer;
}

.fb-pane.fb-pane-nav .fb-favorites .fb-favorite:hover {
    background: #EEE;
}

.fb-pane.fb-pane-main {
    left: 252px;
    right: 0px;
    width: auto;
    overflow: auto;
}

.fb-pane.fb-pane-main .fb-files {
    display: table;
    position: absolute;
    top: 0px;
    left: 0px;
    height: auto;
    width: auto;

    padding: 5px 5px 5px 5px;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.fb-pane.fb-pane-main .fb-files .fb-file {
    display: table-row;
    width: auto;
    cursor: pointer;
    white-space: nowrap;
}

.fb-files .fb-file.selected {
    background: #ccc;
}

.fb-files .fb-file .td {
    display: table-cell;
    vertical-align: middle;
    padding-right: 4px;
    padding-top: 2px;
    padding-bottom: 2px;
    margin: 0 0 0 0;
    width: auto;
}

.fb-files .fb-file .td.progressbar .progress {
    width: 80px;
    height: 16px;
    margin-left: 5px;
    margin-bottom: 0px;
}

.fb-pane.fb-pane-main .fb-files .fb-file:hover {
    background: #EEE;
}

.fb-pane.fb-pane-main .fb-files .fb-file.selected:hover {
    background: #ccc;
}

.fb-pane-statusbar {
    position: absolute;
    top: auto;
    left: 0px;
    bottom: 0px;
    width: 100%;
    height: 30px;
    background: #FFF;
}

.fb-pane-statusbar .statusbar {
    position: absolute;
    height: 100%;
    width: 100%;
    display: table-cell;
    vertical-align: middle;
}

.fb-pane-statusbar .statusbar .status-text {
    position: absolute;
    left: 0px;
    top: 50%;
    margin-top: -9px;
    margin-left: 5px;
    width: auto;
}

.fb-pane-statusbar .statusbar .status-buttons {
    position: absolute;
    right: 0px;
    top: 50%;
    margin-top: -11px;
    margin-right: 5px;
    width: auto;
}

span.glyphicon {
    vertical-align: middle;
    margin-top: -5px;
}

.dz-drag-hover {
    outline: 2px solid RoyalBlue;
}

